gccida/c3/parmlist_tags_warning
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parmlist_tags_warning/src/c-decl.c:5924:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)rtl[2]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parmlist_tags_warning/src/c-decl.c:5937:7: error: use of undeclared identifier 'parmlist_tags_warning_already'; did you mean 'parmlist_tags_warning'?
if ( !parmlist_tags_warning_already ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      parmlist_tags_warning
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parmlist_tags_warning/src/c-decl.c:5909:7: note: 'parmlist_tags_warning' declared here
void  parmlist_tags_warning( ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parmlist_tags_warning/src/c-decl.c:5954:7: error: use of undeclared identifier 'parmlist_tags_warning_already'; did you mean 'parmlist_tags_warning'?
if ( !parmlist_tags_warning_already ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      parmlist_tags_warning
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parmlist_tags_warning/src/c-decl.c:5909:7: note: 'parmlist_tags_warning' declared here
void  parmlist_tags_warning( ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parmlist_tags_warning/src/c-decl.c:5958:1: error: use of undeclared identifier 'parmlist_tags_warning_already'
parmlist_tags_warning_already = 1; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/parmlist_tags_warning/src/obj/c-decl.o] Error 1
